remove some deprecated flags